bk_ida/gccida/c0/ix86_return_in_memory
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/i386.c:2773:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/i386.c:2780:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| ( mode_class_0[( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1] == MODE_VECTOR_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/i386.c:2781:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1] == MODE_VECTOR_FLOAT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/i386.c:2786:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1] != MODE_VECTOR_INT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/i386.c:2787:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[( unsigned __int8)HIBYTE( WORD2( typea->block.abstract_origin)) >> 1] != MODE_VECTOR_FLOAT; 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/ix86_return_in_memory/src/obj/i386.o] Error 1
